--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ Flask==2.1.2
 WTForms==3.0.1
 Pillow==9.1.0
 requests==2.27.1
+Flask-RESTful==0.3.9
+SQLAlchemy-serializer==1.4.1
+Flask-WTF==1.0.1
+WTForms==3.0.1
